--- a/common/m5stack-stickc/binary_sensor.yaml
+++ b/common/m5stack-stickc/binary_sensor.yaml
@@ -7,10 +7,9 @@ binary_sensor:
    on_press:
      then:
        lambda: |-
-           id(homeThingMenu)->buttonPressRight();
-           auto call = id(led1).turn_on();
-           call.set_transition_length(0);
-           call.perform();
+          id(homeThingMenu)->buttonPressWakeUpDisplay();
+          id(homeThingMenu)->buttonPressSelect();
+          id(led1).turn_on().set_transition_length(0).perform();
    on_release:
      then:
        - light.turn_off: led1
@@ -23,10 +22,9 @@ binary_sensor:
    on_press:
      then:
        lambda: |-
-           id(homeThingMenu)->topMenu(); 
-           auto call = id(led1).turn_on();
-           call.set_transition_length(0);
-           call.perform();
+        id(homeThingMenu)->buttonPressWakeUpDisplay();
+        id(homeThingMenu)->topMenu(); 
+        id(led1).turn_on().set_transition_length(0).perform();
    on_release:
      then:
        - light.turn_off: led1
