--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -24,15 +24,21 @@ wifi: # setup wifi, make sure secrets.yaml exists!
   power_save_mode: HIGH
 
 external_components: #include homething, and esphome-components
-  - source:
+  # - source:
+    #   type: git
+    #   url: https://gitlab.com/geiseri/esphome_extras.git
+    # refresh: 0s
+    # components: [axp192]
+  - source: 
       type: git
-      url: https://gitlab.com/geiseri/esphome_extras.git
-    refresh: 0s
+      url: https://github.com/landonr/esphome-axp192
+      ref: "lando/add-charging-indicator"
     components: [axp192]
+    refresh: 0s
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: sept-update
     refresh: 0s
     components: [homeThing]
   - source:
@@ -54,15 +60,16 @@ external_components: #include homething, and esphome-components
     components: [ font, external_files ]
 
 packages: # maybe modify: include default ipod controls
+  # axp192: !include ../homeThing/common/m5stack-stickc/axp192-marty.yaml # power management and screen backlight
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: main
+    ref: sept-update
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts.yaml, # default font
       common/icon_fonts.yaml, # material icons
       common/settings.yaml, # settings screen
-      common/m5stack-stickc/axp192.yaml, # power management and screen backlight
+      common/m5stack-stickc/axp192-marty.yaml, # power management and screen backlight
       common/m5stack-stickc/sleep.yaml, # deep sleep
       common/m5stack-stickc/binary_sensor.yaml, # power management and screen backlight
       common/images.yaml # boot screen image
@@ -135,8 +142,13 @@ homeThing:
   id: homeThingMenu
   settings:
     sleep_after: 14400
+    display_timeout_while_charging: 30
   media_player_group: media_group_component
   display: my_display
+  backlight: backlight
+  battery:
+    battery_percent: batteryPercent
+    charging: axp_charger
   on_redraw:
     then:
       component.update: my_display
