--- a/m5stack-stickcplus-rotary.yaml
+++ b/m5stack-stickcplus-rotary.yaml
@@ -27,7 +27,7 @@ external_components: #include homething, and esphome-components
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: lando/revert-fonts
+      ref: main
       # type: local
       # path: components
     refresh: 0s
