--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -24,7 +24,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: lando/revert-fonts
+      ref: main
       # type: local
       # path: components
     refresh: 0s
